# Mis-Finanzas-API

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER_SETUP.md  ENDPOINTS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 424ddbd8306c_create_financial_entities.py  e6fa39de6d68_create_field_updated_at_in_debt_model.py
app/: main.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/features/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/shared/: base_repository.py  pagination.py
app/shared/models/: base.py
src/: settings.py
src/dependencies/: async_db.py  auth.py
src/entities/: __init__.py
src/entities/account/: __init__.py  model.py  repository.py  schemas.py  serializer.py
src/entities/category/: __init__.py  model.py  repository.py  schemas.py  serializer.py
src/entities/debt/: __init__.py  model.py  repository.py  schemas.py  serializer.py
src/entities/transaction/: __init__.py  model.py  repository.py  schemas.py  serializer.py
src/entities/user/: __init__.py  model.py  repository.py  schemas.py  serializer.py
src/exceptions/: __init__.py  bad_request.py  base.py  docs.py  forbidden_exception.py  general.py  not_found.py  unauthorized.py  unprocessable_entity.py
src/routes/: __init__.py
src/routes/accounts/: __init__.py  controller.py  requests.py  responses.py  service.py
src/routes/alert_configuration/: __init__.py  controller.py  permissions.py  requests.py  responses.py  service.py
src/routes/auth/: __init__.py  controller.py  requests.py  responses.py  service.py
src/routes/categories/: __init__.py  controller.py  requests.py  responses.py  service.py
src/routes/dashboard/: __init__.py  controller.py  requests.py  responses.py  service.py
src/routes/debts/: __init__.py  controller.py  requests.py  responses.py  service.py
src/routes/movements/: __init__.py  controller.py  requests.py  responses.py  service.py
src/utils/: connection_db.py  enums.py  helpers.py  security.py
