[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misfinanzas-api"
version = "0.1.0"
description = "FastAPI REST API para gestión de finanzas personales"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MisFinanzas Team" }]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic[email]==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".venv", "venv", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["venv", "alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]
