[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misfinanzas-api"
version = "0.1.0"
description = "FastAPI REST API para gestión de finanzas personales"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MisFinanzas Team" }]

dependencies = [
    "fastapi[standard]>=0.116.0",
    "gunicorn==23.0.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic[email]==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "sqlalchemy-utils==0.41.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.8",
]

[tool.ruff]
line-length = 88           # same as Black default
target-version = "py312"   # since you’re on Python 3.12
fix = true                 # auto-fix lint errors when possible


[tool.ruff.lint]
extend-select = ["N", "R", "I"]
ignore = ["N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.hatch.build.targets.wheel]
packages = ["src"]